--- a/frontend/src/styles/components/_HeroSection.scss
+++ b/frontend/src/styles/components/_HeroSection.scss
@@ -25,3 +25,18 @@
 .public-title {
   margin-bottom: 20px;
 }
+
+
+@media (max-width: 600px) {
+  .title-typed-box {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .title-slogan {
+    margin-top: 50px;
+    font-size: 24px;
+  }
+  .sub-title-slogan {
+    font-size: 15px;
+  }
+}
