--- a/frontend/src/styles/pages/_LessonPage.scss
+++ b/frontend/src/styles/pages/_LessonPage.scss
@@ -20,3 +20,13 @@
 .code-section {
   max-width: 55vw;
 }
+
+@media (max-width: 600px) {
+  .lesson-wrapper {
+    flex-direction: column;
+  }
+  .chat-par-section,
+  .chat-cmp {
+    width: auto;
+  }
+}
