Update for mobile

--- a/frontend/src/styles/pages/_LessonPage.scss
+++ b/frontend/src/styles/pages/_LessonPage.scss
@@ -24,6 +24,8 @@
 @media (max-width: 600px) {
   .lesson-wrapper {
     flex-direction: column;
+    height: 100%;
+    margin-bottom: 60px;
   }
   .chat-par-section,
   .chat-cmp {
