yair code review

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -20,3 +20,8 @@
 @import "./pages/LessonListPage";
 @import "./pages/LessonPage";
 @import "./pages/EditPage";
+
+/*
+  Bigger note - refactor this when you can to component scoped styles and
+  put as little as you can in global styles
+ */
