--- a/frontend/src/styles/misc/_basics.scss
+++ b/frontend/src/styles/misc/_basics.scss
@@ -2,6 +2,7 @@ body {
   background-color: $clr1;
   margin: 0;
   padding: 0;
+  // remove notes (across the board)
   // font-family: "system-ui";
   color: $clr10;
   letter-spacing: 2px;
