Update UI for mobile

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./misc/utilities";
 @import "./misc/notifications";
 @import "./misc/support";
+@import "./misc/layout";
 
 //cmps
 @import "./components/NavBar";
@@ -15,6 +16,7 @@
 @import "./components/Modal";
 @import "./components/HeroSection";
 @import "./components/AnimatedCode";
+@import "./components/Footer";
 
 //pages
 @import "./pages/LessonListPage";
