--- a/frontend/src/styles/components/_LessonPreview.scss
+++ b/frontend/src/styles/components/_LessonPreview.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   h2 {
@@ -26,7 +26,7 @@
 }
 
 .settings-icon {
-  font-size: 30px;
+  font-size: 1.2rem;
   &:hover {
     animation: rotate 3s linear infinite;
   }
