--- a/frontend/src/styles/components/_NavBar.scss
+++ b/frontend/src/styles/components/_NavBar.scss
@@ -2,53 +2,40 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
   padding-inline: 30px;
   padding-top: 20px;
-  font-size: 30px;
+}
 
-  span {
-    font-size: 35px;
+.new-project-btn {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 1.1rem;
+  line-height: 1.1rem;
+  background-color: #5054a0;
+  color: white;
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: #5054a0 !important;
   }
-
   svg {
-    font-size: 21px;
-    margin-inline: 3px;
+    font-size: 0.8rem;
+  }
+}
+
+.logo-link {
+  font-size: 1.4rem;
+  .circle-svg {
+    font-size: 0.8rem;
+    margin-right: 1px;
+    margin-bottom: 0.5px;
+    animation: circle-animation 80s infinite linear;
   }
 
-  // logo-link
-
-  .logo-link {
+  &:hover {
     .circle-svg {
-      animation: circle-animation 80s infinite linear;
-    }
-
-    &:hover {
-      .circle-svg {
-        animation: circle-animation 2s infinite linear;
-      }
-    }
-  }
-
-  // new project-link
-
-  .create-svg {
-    margin-right: 5px;
-  }
-
-  .create-link {
-    display: flex;
-    align-items: center;
-    span {
-      font-size: 25px;
-    }
-    color: $clr1;
-    background: $clr10;
-    border-radius: 15px;
-    padding: 2px 13px 4px;
-    opacity: 0.9;
-    &:hover {
-      opacity: 10;
+      animation: circle-animation 2s infinite linear;
     }
   }
 }
@@ -63,25 +50,4 @@
 }
 
 @media (max-width: 600px) {
-  .nav-bar {
-    .logo-link {
-      line-height: 12px;
-      span {
-        font-size: 20px;
-      }
-      svg {
-        font-size: 12px;
-        margin-inline: 3px;
-        margin-top: 8px;
-      }
-    }
-    .create-link {
-      line-height: 12px;
-      padding: 3px 7px 2px 3px;
-      span,
-      svg {
-        font-size: 18px;
-      }
-    }
-  }
 }
