--- a/frontend/src/styles/components/_Modal.scss
+++ b/frontend/src/styles/components/_Modal.scss
@@ -18,6 +18,10 @@
   padding: 20px;
   min-width: 300px;
 
+  h4 {
+    margin-bottom: -10px;
+  }
+
   input:focus {
     box-shadow: 0 0 0 0.25rem $clr2;
     border-color: $clr2;
