--- a/frontend/src/styles/components/_NavBar.scss
+++ b/frontend/src/styles/components/_NavBar.scss
@@ -12,12 +12,12 @@
   gap: 5px;
   font-size: 1.1rem;
   line-height: 1.1rem;
-  background-color: #5054a0;
-  color: white;
+  background-color: #26dd6b;
+  color: black !important;
   &:hover,
   &:focus,
   &:active {
-    background-color: #5054a0 !important;
+    background-color: #26dd6b !important;
   }
   svg {
     font-size: 0.8rem;
@@ -31,6 +31,7 @@
     margin-right: 1px;
     margin-bottom: 0.5px;
     animation: circle-animation 80s infinite linear;
+    color: #26dd6b;
   }
 
   &:hover {
