--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -6,7 +6,7 @@
 @import "./misc/support";
 @import "./misc/layout";
 
-//cmps
+//components
 @import "./components/NavBar";
 @import "./components/LessonPreview";
 @import "./components/CodeBlock";
