--- a/frontend/src/styles/components/_NavBar.scss
+++ b/frontend/src/styles/components/_NavBar.scss
@@ -7,20 +7,50 @@
 }
 
 .new-project-btn {
+  position: relative;
   display: flex;
   align-items: center;
   gap: 5px;
   font-size: 1.1rem;
   line-height: 1.1rem;
-  background-color: #26dd6b;
+  background-color: $clr4;
   color: black !important;
+  border: none;
+  transition: 0.3s ease-in-out;
+  overflow: hidden;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-100%);
+    background-color: white !important;
+    transition: 0.3s ease-in-out;
+  }
+
   &:hover,
   &:focus,
   &:active {
-    background-color: #26dd6b !important;
+    background-color: $clr4 !important;
+    &:before {
+      transform: translateX(0%);
+    }
   }
+
+  span {
+    position: relative;
+  }
+
+  button {
+    z-index: 10;
+  }
+
   svg {
     font-size: 0.8rem;
+    position: relative;
   }
 }
 
@@ -31,7 +61,7 @@
     margin-right: 1px;
     margin-bottom: 0.5px;
     animation: circle-animation 80s infinite linear;
-    color: #26dd6b;
+    color: $clr4;
   }
 
   &:hover {
@@ -50,5 +80,3 @@
   }
 }
 
-@media (max-width: 600px) {
-}
