--- a/frontend/src/styles/misc/_variables.scss
+++ b/frontend/src/styles/misc/_variables.scss
@@ -1,5 +1,7 @@
 $clr1: #0b0e11; // main background
 $clr2: #3c4955; // lesson preview
 $clr3: #232d37; // code / chat / edit
+$clr4: #26dd6b; // primary color
 $clr10: white; // gear icon
+
 
