Update UI, fetch error, smooth sync icon, ghost btn

--- a/frontend/src/styles/components/_Modal.scss
+++ b/frontend/src/styles/components/_Modal.scss
@@ -53,3 +53,13 @@
   display: flex;
   justify-content: space-between;
 }
+
+.btn-back {
+  background-color: transparent;
+  color: #bababa;
+  border: #bababa 1px solid;
+  &:hover {
+    background-color: initial;
+    border: white 1px solid;
+  }
+}
