--- a/frontend/src/styles/misc/_basics.scss
+++ b/frontend/src/styles/misc/_basics.scss
@@ -24,6 +24,15 @@ h5 {
   margin: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 /* scrollbar  */
 
 ::-webkit-scrollbar {
