--- a/frontend/src/styles/components/_LessonPreview.scss
+++ b/frontend/src/styles/components/_LessonPreview.scss
@@ -17,11 +17,25 @@
     margin: 0;
   }
 
+  a {
+    position: relative;
+    z-index: 10;
+    pre {
+      user-select: none;
+      cursor: pointer;
+    }
+  }
+
   .code-block-wrapper {
     position: relative;
     z-index: -10;
     height: 70%;
   }
+
+  // &:hover{
+  //   // box-shadow: 1px 1px 1px 1px $clr4;
+  //   box-shadow: 0px 0px 1px 1px grey;
+  // }
 }
 
 .settings-icon {
