--- a/frontend/src/styles/components/_Modal.scss
+++ b/frontend/src/styles/components/_Modal.scss
@@ -22,10 +22,25 @@
     margin-bottom: -10px;
   }
 
-  input:focus {
-    box-shadow: 0 0 0 0.25rem $clr2;
-    border-color: $clr2;
+  .modal-sub-title {
+    font-weight: 300;
+    font-size: 0.95rem;
   }
+
+  .modal-input-field {
+    background: transparent;
+    color: white;
+    border: 1px solid white;
+    margin: 5px 0 10px 0;
+    box-shadow: 0 0 0 0.25px white;
+    &::placeholder {
+      color: rgb(181, 181, 181);
+    }
+    &:focus {
+        box-shadow: 0 0 0 1px white;
+    }
+  }
+
   form {
     display: flex;
     flex-direction: column;
@@ -66,8 +81,17 @@
 }
 
 .btn-join {
-  &:hover,
-  &:focus {
-    background-color: black !important;
+  background-color: white;
+  opacity: 0.9;
+  font-weight: 400;
+  color: $clr3;
+  &:disabled {
+    background-color: rgba($color: grey, $alpha: 0.3);
+    border: none;
+  }
+  &:hover {
+    background-color: white;
+    opacity: 1;
+    color: $clr3;
   }
 }
