Update Lobby.scss to auto-fit grid

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -19,6 +19,6 @@
 @import "./components/Footer";
 
 //pages
-@import "./pages/LessonListPage";
+@import "./pages/Lobby";
 @import "./pages/Room";
 @import "./pages/EditPage";
