--- a/frontend/src/styles/components/_CodeBlock.scss
+++ b/frontend/src/styles/components/_CodeBlock.scss
@@ -5,29 +5,22 @@
   padding: 20px;
   background-color: $clr3;
   width: 100%;
+  overflow: hidden;
 
   .CodeMirror {
     width: 100%;
     height: 100% !important;
-    max-width: 55vw;
+    // max-width: 55vw;
     background-color: $clr3 !important;
     height: fit-content;
     & > {
-      overflow-y: hidden;
+      // overflow-y: scroll;
     }
-  }
-
-  pre::-webkit-scrollbar,
-  .CodeMirror::-webkit-scrollbar,
-  .CodeMirror-scrollbar-filler,
-  .CodeMirror-vscrollbar,
-  .CodeMirror-hscrollbar {
-    display: none !important;
   }
 
   pre {
     width: 100%;
-    overflow: initial;
+    // overflow: initial;
   }
 }
 
