--- a/frontend/src/styles/components/_HeroSection.scss
+++ b/frontend/src/styles/components/_HeroSection.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 50px;
-  margin: 0% 10%;
+  margin-bottom: 15px;
 }
 
 .title-typed-box {
@@ -20,6 +19,8 @@
 
 .public-title {
   align-self: flex-start;
+  font-size: 1.45rem;
+  font-weight: 400;
 }
 
 @media (max-width: 600px) {
