--- a/frontend/src/styles/components/_Modal.scss
+++ b/frontend/src/styles/components/_Modal.scss
@@ -10,6 +10,7 @@
 }
 
 .dialog-modal {
+  margin: auto;
   z-index: 20;
   border: none;
   border-radius: 10px;
@@ -37,7 +38,7 @@
       color: rgb(181, 181, 181);
     }
     &:focus {
-        box-shadow: 0 0 0 1px white;
+      box-shadow: 0 0 0 1px white;
     }
   }
 
