Create loader component for the execution

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -10,6 +10,7 @@
 @import "./components/NavBar";
 @import "./components/LessonPreview";
 @import "./components/CodeBlock";
+@import "./components/ExecutionLoader";
 @import "./components/ParBox";
 @import "./components/Chat";
 @import "./components/ControlBox";
@@ -22,3 +23,5 @@
 @import "./pages/Lobby";
 @import "./pages/Room";
 @import "./pages/EditPage";
+
+
