--- a/frontend/src/styles/components/_CodeBlock.scss
+++ b/frontend/src/styles/components/_CodeBlock.scss
@@ -5,7 +5,6 @@
   background-color: $clr3;
   width: 100%;
   overflow: hidden;
-  
 
   .CodeMirror {
     width: 100%;
@@ -28,10 +27,81 @@
   z-index: -1;
 }
 
+.highlighted-line {
+  background-color: $clr2;
+}
+
+.CodeMirror-line ::selection {
+  background-color: #ffcc00 !important; /* Custom background color */
+  color: #000; /* Custom text color */
+}
+
+.custom-selection {
+  background-color: rgba($color: #cf0000, $alpha: 0.3);
+}
+
+.code-section {
+  .CodeMirror-lines {
+    margin-top: 17px;
+  }
+}
+
+.custom-widget {
+  background-color: #cf0000;
+  color: black;
+  font-size: 14px;
+  padding-inline: 5px;
+  // position: absolute;
+  font-family: monospace;
+  opacity: 0.7;
+  border-radius: 5px;
+  // left: -10px;
+}
+
+.bookmark-badge {
+  padding-inline: 10px;
+  border-radius: 5px;
+  // opacity: 0.9;
+  margin-left: 5px;
+}
+
+.bookmark-badge::before {
+  // font-family: "Font Awesome 5 Free"; /* or "Font Awesome 5 Pro" if using pro */
+  // content: "\f246"; /* Example for a user icon */
+  content: "|"; 
+  font-weight: bold; 
+  background-color: transparent;
+  font-size: 16px;
+  top: 20px;
+  left: -10px;
+  color: red;
+  position: absolute;
+  animation: flicker 1s infinite;
+}
+
+@keyframes flicker {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
+.user-badge {
+  width: fit-content;
+  background-color: #cf0000;
+  color: black;
+}
+
 @media (max-width: 600px) {
   .code-block-wrapper {
     .CodeMirror {
       max-width: unset;
+      font-size: 0.8rem;
+    }
+    .bookmark-badge::before {
       font-size: 0.8rem;
     }
   }
